[package]
name = "paperview-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.19.2", features = [ "xcb"] }
image = "0.25.0"
x11rb = { version = "0.13.0", features = ["allow-unsafe-code", "render"] }
xcb = "1.3.0"
